# python-cli-template

./: README.md  pyproject.toml
minimal/: __main__.py
project/src/proj/: arguments.py  logger.py
project/src/proj/command/: __main__.py
simple/: __main__.py
simple-project/: __main__.py
simple-project/modules/: arguments.py
